<resources>
    <string name="app_name">Multithreading</string>
    <string name="label_nhap">Nhập vào một số dương lớn hơn 0</string>
    <string name="hint_nhap">Nhập vào đây</string>
    <string name="description">Chương trình sẽ chạy 2 luồng (đếm xuôi và đếm ngược) với thời gian nhảy là 1 giây</string>
    <string name="start_1">Bắt đầu đếm ngược</string>
    <string name="start_2">Bắt đầu đếm xuôi</string>
</resources>
